<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="open_memory_settings">Allow SD-Card Access</string>
    <string name="open_battery_optimization_settings">Disable Akku Opt.</string>
    <string name="app_name">JSIDPlay2</string>
    <string name="splash">splash screen</string>
    <string name="portNum">8080</string>
    <string name="photo">SID author photo</string>
    <string name="title_activity_main">JSIDPlay2</string>
    <string name="hello_world">Directory:</string>
    <string name="action_quit">Quit</string>
    <string name="button2">Browse&#8230;</string>
    <string name="hostname">Hostname</string>
    <string name="port">Port</string>
    <string name="username">username</string>
    <string name="user_jsidplay2">jsidplay2</string>
    <string name="password">password</string>
    <string name="btn_download">as SID</string>
    <string name="btn_play">Play</string><string name="btn_mp3">add MP3 Stream to PlayList</string>
    <string name="tune_hint">SID Tune</string>
    <string name="HVSCEntry.path">Full Path</string>
    <string name="HVSCEntry.name">File Name</string>
    <string name="HVSCEntry.title">Title</string>
    <string name="HVSCEntry.author">Author</string>
    <string name="HVSCEntry.released">Released</string>
    <string name="HVSCEntry.format">Format</string>
    <string name="HVSCEntry.playerId">Player ID</string>
    <string name="HVSCEntry.noOfSongs">No. of Songs</string>
    <string name="HVSCEntry.startSong">Start song</string>
    <string name="HVSCEntry.clockFreq">Clock Freq.</string>
    <string name="HVSCEntry.speed">Speed</string>
    <string name="HVSCEntry.sidModel1">SID model 1</string>
    <string name="HVSCEntry.sidModel2">SID model 2</string>
    <string name="HVSCEntry.sidModel3">SID model 3</string>
    <string name="HVSCEntry.compatibility">Compatibility</string>
    <string name="HVSCEntry.tuneLength">Tune length (s)</string>
    <string name="HVSCEntry.audio">Audio</string>
    <string name="HVSCEntry.sidChipBase1">SID chip base 1</string>
    <string name="HVSCEntry.sidChipBase2">SID chip base 2</string>
    <string name="HVSCEntry.sidChipBase3">SID chip base 3</string>
    <string name="HVSCEntry.driverAddress">Driver Address</string>
    <string name="HVSCEntry.loadAddress">Load Address</string>
    <string name="HVSCEntry.loadLength">Load Length</string>
    <string name="HVSCEntry.initAddress">Init Address</string>
    <string name="HVSCEntry.playerAddress">Player Address</string>
    <string name="HVSCEntry.fileDate">File Date</string>
    <string name="HVSCEntry.fileSizeKb">File size (kb)</string>
    <string name="HVSCEntry.tuneSizeB">Tune size (b)</string>
    <string name="HVSCEntry.relocStartPage">Reloc. start page</string>
    <string name="HVSCEntry.relocNoPages">Reloc. no. pages</string>
    <string name="HVSCEntry.stilGlbComment">STIL glb. Comment</string>
    <string name="StilEntry.text">STIL</string>
    <string name="enableDatabase">Detect Song Length</string>
    <string name="defaultLength">Default in sec.</string>
    <string name="singleSong">Single Song</string>
    <string name="loop">Loop Song</string>
    <string name="default_model">Default Model:</string>
    <string name="resid6581">Filter 6581:</string>
    <string name="resid8580">Filter 8580:</string>
    <string name="residfp6581">Filter 6581:</string>
    <string name="residfp8580">Filter 8580:</string>
    <string name="stereoResid6581">Stereo Filter 6581:</string>
    <string name="stereoResid8580">Stereo Filter 8580:</string>
    <string name="stereoResidfp6581">Stereo Filter 6581:</string>
    <string name="stereoResidfp8580">Stereo Filter 8580:</string>
    <string name="thirdResid6581">3-SID Filter 6581:</string>
    <string name="thirdResid8580">3-SID Filter 8580:</string>
    <string name="thirdResidfp6581">3-SID Filter 6581:</string>
    <string name="thirdResidfp8580">3-SID Filter 8580:</string>
    <string name="about">Android App of JSIDPlay2 - Music Player &amp; C64 SID Chip Emulator\n
JSIDPlay2 is copyrighted to:\n
2007-2018 Ken H&#228;ndel,\n
&#x20;&#x20;Antti S. Lankila and Wilfred Bos\n\
Distortion Simulation and 6581/8580 emulation:\n  Copyright &#169; 2005-2011 Antti S. Lankila\n
ReSID engine and 6581/8580 emulation:\n  Copyright &#169; 1999-2011 Dag Lem\n
Source code can be found at:\n
&#x20;&#x20;http://sourceforge.net/projects/jsidplay2/</string>
    <string name="digiBoosted8580">Digi Boost 8580</string>
    <string name="bufferSize">Buffer Size (mobile)</string>
    <string name="bufferSizeWlan">Buffer Size (WLAN)</string>
    <string name="residEngine">ReSID Engine:</string>
    <string name="tab_connection">Con</string>
    <string name="tab_sids">Sids</string>
    <string name="tab_tune">Sid</string>
    <string name="tab_cfg">Cfg</string>
    <string name="tab_playlist">Pl</string>
    <string name="samplingMethod">Sampling Method:</string>
    <string name="frequency">Frequency:</string>
    <string name="stop">Stop</string>
    <string name="downloadPlayList">Example Playlist</string>
    <string name="next">Next</string>
    <string name="removeFavorite">Remove</string>
    <string name="random">Random</string>
    <string name="label_service_jsidplay2">JSIDPlay2</string>
    <string name="desc_service_jsidplay2">MediaPlayer of JSIDPlay2</string>
    <string name="cbr">CBR in Kb (mobile)</string>
    <string name="vbr">VBR Quality (WLAN)</string>
    

</resources>