<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@+id/connections"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/hostname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.41"
                        android:ems="10"
                        android:hint="@string/hostname"
                        android:singleLine="true" >
                    </EditText>

                    <EditText
                        android:id="@+id/port"
                        android:layout_width="76dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.23"
                        android:ems="10"
                        android:hint="@string/port"
                        android:text="8080" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/username"
                        android:text="@string/user_jsidplay2" >

                        <requestFocus />
                    </EditText>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                    
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hvsc"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="hvsc"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/listView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/linearLayout1"
                    android:layout_below="@+id/linearLayout1" >
                </ListView>
            </LinearLayout>

            <TextView
                android:id="@+id/textview3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="this is a third tab" />
        </FrameLayout>
    </LinearLayout>

</TabHost>